--- a/gradle.properties
+++ b/gradle.properties
@@ -1,18 +1,23 @@
-kotlin.code.style=official
-android.useAndroidX=true
+# Gradle
 org.gradle.jvmargs=-Xmx3g
-xcodeproj=./iosApp
 
-kotlin.native.cocoapods.generate.wrapper=true
-kotlin.native.useEmbeddableCompilerJar=true
+# Kotlin
+kotlin.code.style=official
+
+# Android
+android.useAndroidX=true
+
+# MPP
+kotlin.mpp.stability.nowarn=true
 kotlin.mpp.androidSourceSetLayoutVersion=2
 
-org.jetbrains.compose.experimental.macos.enabled=true
+# JS
 org.jetbrains.compose.experimental.jscanvas.enabled=true
 
 # Enable kotlin/native experimental memory model
 kotlin.native.binary.memoryModel=experimental
 
-kotlin.version=1.9.20
+# Versions
+kotlin.version=1.9.21
 agp.version=8.0.2
-compose.version=1.5.10
+compose.version=1.5.11
